--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=security-demo-v2
+
+# Database
+spring.datasource.url=jdbc:h2:mem:securitydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JWT
+app.jwtSecret=mySuperSecretKey123!@#
+app.jwtExpirationMs=86400000
